test: run only lein deploy